# visionpi

./: .gitignore  LICENSE  README.md  pyproject.toml  visionpi.code-workspace
apps/: follow_controller_cli.py  follow_person.py
deploy/: apply_patches.sh  install_services.sh
deploy/services/: hailo-detect-rtsp.service  visionpi-detect.service  visionpi-follow.service
deploy/services/mediamtx.service.d/: override.conf
docs/: 00-overview.md  01-serial-protocol.md  02-pi-setup.md  03-wiring.md
firmware/nano/: README.md  platformio.ini
firmware/nano/include/: config.h
firmware/nano/src/: main.cpp
motors/: __init__.py  driver_base.py  mock_driver.py  real_driver.py
robot/: __init__.py  follow_controller.py  params.py
scripts/: motor_test_rc.py
tests/: conftest.py  test_follow_controller.py  test_motors.py  test_nano_driver.py
vision/: detect_model1.py  detections_reader.py
vision/archive/: detect_to_json.py
